tests/NormalTests/paczka1/small_fuzzy/12092908.err
Error in line 4: gUDlfzUfQp A740 209,8
Error in line 1: s0ayWuoix9 A334 83,9
Error in line 6: s0ayWuoix9 S35 44,8
Error in line 13: IITug3dKC A334 47,7
